--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "pg": "^8.6.0"
   },
   "scripts": {
-    "start": "node server/routes/data.js",
+    "start": "nodemon server/routes/data.js ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "description": ""
